--- a/_units/00.md
+++ b/_units/00.md
@@ -93,38 +93,50 @@ If the stroke damages an area of the brain that is responsible for something in 
 
 Over a century ago, in order to do this type of study the researchers would have to link behavior to brain lesions after the patient had died using an autopsy.
 Strokes are not the only way this would have happened.
-One of the classic examples that lead to our early understandings of the brain is the case of [Phineas Gage]() who survived a traumatic work accident then went on to experience severe changes in their behavior.
-In present day, we often do not have to wait until someone dies due to different neuroimaging techniques.
-Techiques such as  electroencephalagraphy, fMRI, and transcranial magnetic stimulation (TMS) allow for similar observation of the brain without extreme events happening. 
+One of the classic examples that lead to our early understandings of the brain is the case of [Phineas Gage]().
+Gage survived a traumatic work accident then went on to experience severe changes in their behavior.
+You can read more about him in the work of neuroscientist [Antonio Damasio]()'s book [Descarte's Error]().
 
-> ---- edit line
+Today we often do not have to wait until someone dies in order to look at their brain thanks to advances in neuroimaging techniques.
+Techiques such as electroencephalagraphy, fMRI, and transcranial magnetic stimulation (TMS) all allow for similar observation of the brain while the subject is not only alive, but awake an conscious. 
+Since these methods do not require the patient to undergo any surgery, these techniques are called **non-invasive** methods.
 
-Other invasive techniques require implanting electrodes to record the electrical activity of a neuron or population of neurons. 
 
-Noninvasive methods are research techniques that do NOT require the introduction of an instrument into a subject's brain. 
-All neuroimaging methods are noninvasive ones. 
-Of the several neuroimaging methods used to study perception, some are used to identify brain structures: conventional radiographs (X-rays), computerized tomography (CT), and magnetic resonance imaging (MRI). 
-Others are used to identify functional areas of the brain: functional autoradiography, positron emission tomography (PET), and functional magnetic resonance imaging (fMRI). 
-Should this alphabet soup be confusing, do not fret. 
-In the neuroscience portion of the curriculum we shall explore these methods and their underlying assumptions in greater detail.
+Almost all neuroimaging methods used today are noninvasive. 
+The few notable execeptions of examples of invasive techniques working with humans depend on the good will of people who are candiates for surgery and volunteer to do psychological experiments during their stay in the hospital.
+Other neuroscientific methods found when working with animals that require directly recording brain activity on a living animal are not performed on humans for ethical reasons.
 
-# Computer modeling
+In additon to the non-invasive techniques mentiond above, other methods used today also include conventional radiographs (X-rays), computerized tomography (CT), and magnetic resonance imaging (MRI). 
+These methods are able to capture very high quality pictures of the brain and it's structure.
+Others methdods that are used to identify functional areas of the brain inlcude functional autoradiography, positron emission tomography (PET), and functional magnetic resonance imaging (fMRI). 
+The advantage of these methods is that you can capture brain activity instead of just an image.
+As we explore the neuroscience portion of the curriculum, we shall explore these methods and their underlying assumptions in greater detail.
 
-Many people consider 'cognitive science' to be equivalent to 'computational science'. 
-The main reason for this is the nearly universal belief among cognitive scientists that cognition requires computation. 
-Moreover, almost everyone within the cognitive science community considers the following belief to be the fundamental assumption upon which cognitive science itself rests: Minds are to brains what programs are to computers. 
-Some cognitive scientists treat this view only as a metaphor, which is why it is called the computer metaphor. 
-Many others take it to be true literally. 
-As a result, computers play a significant role in cognitive science research. 
-This occurs in two ways. 
+# Computer Modeling
+
+> EDIT LINE
+
+The cogntive sciences depend on computational sciences to help further understanding of both the mind and behavior.
+The main reason for this is a belief among cognitive scientists that cognition requires computation. 
+A lot of ink has been spilled over the metaphor between brains and computers.
+Generally speaking, the human brain can be considered a computer in that it computes things.
+It is not a computer in the way that a laptop or PC works in that there is a motherboard, graphics card, and random access memory.^[Link here]
+
+Since the brain does compute things, the computational sciences play a large role in cognitive science research. 
+We discuss a few ways here.
 First, computers themselves are the subject of intense (sometimes controversial) research into the nature of computation. 
 Second, in every field of cognitive science, computers are used as a research tool to model how information processing occurs in complex systems. 
-Our focus here is on the latter.
+The focus of this next section will look at how computers are used to model complex systems.
 
-So, what is a computer model? 
-Well, a computer model is a computer generated simulation of something. 
-Computers can be used to simulate many kinds of processes -- tidal waves, weather patterns, economies, traffic jams, . . ., you name it. 
-But while it is correct to say that what you see on the computer is an imitation of some natural, social, economic, or other process, it would NOT be correct to say that what you see is a duplication of that natural, social, economic, or other process. 
+What is a computer model? 
+A computer model is a simulation of something. 
+Typically a computer model is a reduction in complexity of a an idea.
+For example, a computer might model the temperature of Berlin, Germany every year.
+The amount of factors that affect the weather in real life Berlin is multifarious and complex, but a computer simulation might only take into account the annual temperature of the last few years.
+From this model, a computer scientist would be able to make an educated guess about what the temperature on any given day in Berlin. 
+
+While this is a simplistic example, computers can be used to simulate almost any process -- tidal waves, weather patterns, economies, traffic jams, . . ., you name it. 
+While it is correct to say that what you see on the computer is an imitation of some natural, social, economic, or other process, it would NOT be correct to say that what you see is a duplication of that natural, social, economic, or other process. 
 To simulate is to imitate, not to duplicate. 
 Such is the reason why you would not run for high ground upon seeing a simulation of a tidal wave.
 
@@ -150,43 +162,117 @@ Is your brain literally a computer or something fundamentally different?
 If your brain is a computer, is it a digital computer (like a Mac or a PC), or is it some other (nonclassical) type of computer? 
 These questions highlight some of the controversies surrounding the widespread use of computers to model and to explain perception.
 
-# Designing a research study
+# Designing a Research Study
 
-Many factors need to be considered when designing a research study in order to ensure that results are meaningful. 
-When designing a research study, a few factors to decide on are the underlying theory and hypothesis, the research question at hand, the quantity and quality of data needed to produce meaningful results, and the sample size and statistical tests needed to produce meaningful results.
+When creating an empirical research study, it is important for scientists to spend a lot of time considering the design of the study so the results are meaningful.
+Everything from getting the research question as exact as possible, the variables to measure, the number of observations needed and measures of structures that might confound the results need to be taken seriously or the results of the entire experiment could be compromised.
+Next, we introduce some terms that you will see over the trajectory of this course when learning about experimental design.
 
-## Sample size and statistical power
-Sample size in psychological research refers to the number of observations (cases, individuals, units) included in a selection of items to be studied. This is usually denoted N (for the study as a whole) or n (for subgroups from the study). The sample size needed for a study can be estimated from a measure of statistical power, which is how effective a statistical procedure is at identifying real differences between populations. Power ranges from 0 to 1, with values of .80 or above generally considered acceptable. 
+## Sample Size and Statistical Power
+
+In psychological research, sample size refers to the number of observations (cases, individuals, units) included in a selection of items to be studied. 
+This is usually denoted N (for the study as a whole) or n (for subgroups from the study). 
+Generally speaking, the more observations that you have, the better your study is going to be at being able to be confident in your results.
+How you decide to define your confidence depends on the statistical methods you choose to use when you analyze your data.
+
+By far the most common way to do statistical analyses comes from the **Frequestist** school of thinking.
+For frequentists, sample size helps increase the probability that in an experimental study you are able to detect a real effect. 
+The higher your sample size, the greater your power.
+That said, you will need a very large sample to detect a small effect.
+Within typcial practice your statistical power ranges from 0 to 1 (Cohen, 1992).
+A power of 1 would mean that if an effect exists, you are 100% likely to detect it with your experimental design.
+Many psychological experiments will be conducted with a power of .80, meaning that they will be able to find a true effect 80% of the time. 
+
+The other way to do statistical analyses is the **Bayesian** school of thinking.
+Like frequentists, more data will also help with a Bayesian data analysis.
+Unlike frequestists, Bayesians tend to be more interested in quantifying the amount of error associated wtih a measurement than whether or not we can conclude if an effect exists or not.
+Baysians are intersted in the probability of your hypothesis given you data, rather than the other way around. 
+To learn more about Bayesian data analysis, there are [textbooks]() that focus on this. 
+
 
 ## Variables
 
-The different aspects that can change within an experiment are called *variables*.
+The different aspects that can change within an experiment are called **variables**.
+Variables are what we measure in the world.
+Some variables we can measure directly such as someone's height or eye color.
+Some variables that we are interested we can't measure directly.
+Variables such as personality are assumed to exist, but we have to measure them indirectly.
 
-*Dependent*: The dependent variable is the aspect of the experiment that is being measured.
+The extent that a varible measures what we think it should measure is referred to as its **validity**.
+A good example of a measure with high validity might be using a digital scale to measure the weight of your cat.
+An example a measure with low validity might be trying to measure your cat's intelligence by counting the number of mice it catches in a week.
+In the first example, the variable of interest-- weight-- has a very clear mapping to an established construct: weight.
+In the second example, the variable of interest --intelligence-- might well exist, but just using the number of mice it catches could be confounded by other variables.
+For example, if your cat doesn't live near a lot of mice, you might think they're not that bright.
 
-*Independent*: The independent variable is the aspect of the experiment that is being manipulated 
+The extent that you are able to get the same measure on your variable is referred to as its **reliablity**.
+Returning to the example from above, a digital scale would also be a reliable measure of weight since every time you weigh your cat it will give you the same number.
+Measuring your cat's intelligence based on their mouse catching might also have low reliablity.
+For example, if one week your cat has eaten a lot of food or the weather is bad, the cat is not always going to be able to catch a similar amount of mice.
 
-*Hypothesis*: a predicted relationship between Independent Variable and Dependent Variable
+Validity and reliablity are highly related, but it is important to note how they can be different.
+They become all the more important when considering them in an experimenal context.
 
-*Control*: an aspect of an experiment that is not being manipulated, or is being manipulated differently from the independent variable, in order to increase reliability of the experiment.
 
-*Randomization*
-1. Random sampling - each member of a population is equally likely to be chosen 
-1. Advantage: Generalizability (external validity)
-1. Randomization with replacement
-1. Randomization with constraints 
+### Experimental Terminology 
 
-*Confounding variable*: any circumstance that changes systematically with the independent variable (Confound means puzzling)    
+In experiments, we often want have a variable that we are interested in studying.
+In the examples from above, these would be variables like weight and personality in cats.
+In music psychology, these might be quetions about performance ability, musical memory capacity, or how surprising a chord is.
+The variable that we want to measure and study is called our **dependent variable**.
 
-*Internal validity:* whether the manipulated change in the independent variable caused the change in the dependent variable (or whether something else caused the change) 
+Within the context of experiment, we often want to investigate possible causal relationships between variables.
+If we think we can make a change in one variable and it will affect another, we might want to set up an experiment where we can manipulate that.
+In this context, the variable that we manipulate is the **independent** variable.
 
-## Theories and logical reasoning
+It is important before setting up an experiment that we make a prediction about what will happen.
+If we don't, people are often very good at looking at the world and trying to make a story about how it ended up that way.
+In order for scientists to keep track of what they think is going to happen in an experiment, scientists come up with **hypotheses**.
 
-Induction (reasoning): Observation —> Pattern —> Hypothesis —> Theory (specific to general)
+A hypothesis is a predicted outcome that will result from an experiment.
+The result of this hypothesis often is derived from a theory, which is an attempt to describe how something works. 
 
-Deduction (reasoning): Theory —> Hypothesis —> Observation —> Confirmation (general to specific)
+Often in experimental designs, it is important to have some sort of **control**.
+Within the context of an experiment, a control is an aspect of an experiment that is not being manipulated.
+Typically when two ideas are being tested against each other, the control group acts as a baseline measure where no manipulation occurs.
+If changes happen in the group where one of the independent variables was manipulated and nothing in the control group where the independent variable was not manipulated, this would be evidence to suggest you have found a causal effect!
 
-Theories can be Descriptive vs. Quantitative (vs. Analogical)
+The word control also has a definition within statistical models.
+A control in a statistical model is a variable thought to also affect the dependent variable, but is not of direct interest.
+For example, if you wanted to investigate the effects of certain way of practicing piano on making errors in performance in children, you might want to control for age.
+Kids differ a lot from one another in systematic ways.
+Older kids tend to be able to perform the piano better than younger kids.
+There are ways to account for this in a statistical model and this is what is meant when the word control is used in a statistical context.  
+If you do not do this, the results of your experiment might be explained better by something else, or **confounded**.
+
+It is also important when considering experimental designs to **randomize** your **samples**.
+Randomization within an experimental design is the best way to account for biases and confounds in your study.
+Randomizing ensures that each member of your population is equally likely to be chosen so that when you get the results of your experiment, you can be more sure that they generalize.
+
+
+## Theories and Logical Reasoning
+
+Lastly, we will discuss some common terms related to scientific reasoning.
+Specifically, we want to discuss **inductive** and **deuctive** reasonsing. 
+
+Inductive reasoning occurs when a scientist observes a pattern in the the world, then makes a theory based on their observations of the world.
+From their theory, they are able to make certain predictions in the forms of hypotheses.
+Most scientific reasoning starts from a point of induction, with some noteable exceptions.
+With inductive reasoning, you are starting with specific examples then moving to a larger theory.
+An example of this would be Charles Darwin seeing the similarities in many species of animals then formulating his theory of evolution. 
+
+Unlike inductive reasoning, deductive reasoning starts with a theory, then tests hypotheses.
+By starting with a theory, you already have an idea of how the world works.
+Because you are able to say this ahead of time, there is a possiblity you might be proven wrong.
+This is important because if you have a theory about the world and there is no way to prove it wrong, some scientists would not even consider it a scientific idea!
+
+Questions related to inductive and deductive reasoning are of the highest importance to how scientists know what they know. 
+For more reading on this important topic, check out [Explaining Psychology as Science]().
+
+Lastly, it is important to note that because the world is complex, it is important for scientists to be as exact as possible when describing their theories.
+One way scientists can do this is to formulate computational models of the world.
+The idea here, to borrow from [Guest and Martin](), is to ensure that "your ideas area able to run on someone else's comptuer".
+As noted by Farell and Lewandowsky, without formulating some sort of computational model of a theory, some verbal descriptions of the world can have multiple versions, all compatable with the verbal description.
 
 > A good theory accounts for most of the data, is testable, is not too restrictive, has parsimony, and is able to predict the outcome of future experiments, and the best theories help answer ultimate questions (why questions) rather than just proximate questions (what questions). (David W. Martin, _Doing Psychology Experiments_)
 
