--- a/_units/01.md
+++ b/_units/01.md
@@ -164,7 +164,7 @@ detail. The horizontal dimension represents time, and the vertical dimension
 represents *amplitude*, a physical property related to the perceptual
 experience of *loudness*. This representation of a sound is said to be in 
 the *time domain*, because it shows us how the signal varies as a function
-of time. We should keep in mind, though, that what we experience as *sound*
+of time. We should keep in mind that what we experience as *sound*
 involves the higher-order cognitive processing of a dynamically changing
 3-dimentional signal as it interacts with our environment over time. By
 contrast, figure {{ fig_waveform }} is a rather simple, two dimentional signal
@@ -204,6 +204,7 @@ higher frequencies and shorter periods correlating to higher
 *sounding* notes or pitches.
 
 ### Phase
+
 The phase is the position
 in the period relative to some point that we determine to be the beginning.
 The phase tells us how much of the periodic waveform has elapsed, and 
@@ -237,8 +238,11 @@ a time shift, they should sound identical, right? Well they do, but that
 doesn't mean that phase isn't important, but its affect on sound is 
 not always intuitive. For a sinusoid by it self, it is impossible to hear
 any difference, no matter where it started in its cycle. 
+Where you can begin to hear a difference is when you start to combine different 
+sine waves.
+
 When two sinusoids are added together, the relationship of their 
-phase and frequency determine how they sound. When they have the same
+phase and frequency determines how they sound. When they have the same
 frequency and phase, the result is a sinusoid with an amplitude 
 equal to the sum of the two. But when the phase of one of them is
 exactly half that of the other, the two cancel each other out and produce
@@ -314,6 +318,11 @@ a piano sound like a piano (more on this in unit
 When pure tones with frequencies that are integer multiples of some 
 frequency are added together, we say that they are in a *harmonic* relationship;
 all other sounds are said to be *inharmonic*. 
+For example, if you had a tone that played at 440 cycles per second -- the 
+pitch concert A that many orchestras tune to-- and added another tone that 
+played at 880 cycles per second, this would create a harmonic relationship.
+If you instead added a tone the played at 457 cycles per second, this would be
+inharmonic. 
 
 In reality, all sounds are complex---there are no truely pure sounds. 
 The sinusoids we discussed above are only theoretical, and any physical 
@@ -328,8 +337,19 @@ humidity, small changes in the air produce small changes that manifest as
 # Frequency Domain Representations of Signals
 
 As we saw in figure {{ does_phase_matter }}, the time-domain representation
-of a signal is useful for certain things, but getting a sense of the 
-frequency content by looking at it can be misleading.
+of a signal is useful for certain things. For example, if you are editing 
+some audio for a track you are working on in a digital audio workstation like
+Audacity, Garage Band, or ProTools, it makes sense to be able to "see" the 
+waveform of the sound as it progresses over time. 
+
+From the amplitude of the wave you can see where it gets louder and depending 
+on where you scroll on the wave you can find a specific point in the time of the track.
+But there is still a lot of information in that complex wave that might be useful.
+
+What if we could take a wave form and suspend it in time, then look at a portion of it to 
+get a better idea of all the component parts that make up the complex wave?
+In our next section, we look at a mathmatical technique called Fourier transform 
+that allows us to do just that. 
 
 ## Fourier Transform
 
@@ -337,6 +357,11 @@ We can move from the time-domain into the *frequency-domain* through
 a transformation of the signal known as the 
 [*Fourier Transform*](https://en.wikipedia.org/wiki/Fourier_transform), after
 [Joseph Fourier](https://en.wikipedia.org/wiki/Joseph_Fourier).
+We're going to take a brief dive into the math behind it, but don't worry if 
+it all doesn't click on your first read. Wrapping your head around what the 
+Fourier Transform is doing can be difficult, but once you understand it, it 
+can be used as very powerful tool. 
+
 The Fourier Transform (FT) is a function that takes a time-domain 
 signal as its input and produces a function of frequency as its output:
 \begin{equation}
@@ -395,20 +420,29 @@ X(k)=\sum^{N-1}_{n=0}x(n)e^{i2\pi\frac{kn}{N}}
 (if you missed it, it's a little missing "-" sign in the exponent towards the 
 right-hand side).
 
+While that is probably more math than you might normally come into contact with 
+in a course on music psychology, the FT allows us to perform very clever types of 
+analyses of sounds as we will see below. 
+
 {% include note author="jm" text="is this too much math and / or discussion
-about the FT?" %}
+{% include note author="djb" text="I like it, just added some stuff about the why on either end" %}
 
 ## Spectrum
 
-The frequency domain represention of a signal is often referred to as its
+Once a wave form has been converted from the time domain to the frequency domain 
+using a fourier transformation, the resulting representation is often referred to as its
 *spectrum*. 
+The spectrum is basically a snapshot of the component parts of whatever waveform 
+that you fed into the fourier transform.
+You could do this with something as short as a recording of a pluck of a single note 
+on a banjo or an entire symphony.
 
 {% include begin-figure description="The spectrum of an audio signal." %}
 {% include note author="jm" text="interactive spectrum example with 
 the ability to blend components etc" %}
 {% include end-figure %}
 
-We now have a more clear view of the frequency composition of a signal.
+Looking at a sound's spectrum, we now have a more clear view of the frequency composition of a signal.
 Although the DFT does actually produce the phase of each component, 
 that information is often thrown away in the name of efficiency, which 
 is also a tacit statement that it is a significantly less important feature
@@ -421,6 +455,31 @@ Another representation of the spectrum over time is called a *sonogram*:
 Here, we can see a history of the spectrum over time, with the height
 representing frequency, the brightness *magnitude* (related to amplitude),
 and time along the x-axis.
+
+The reason that we might want to make a sonogram is if we wanted to visually investigate 
+the component parts of a sound.
+For example, above we learned that a sound's timbre or tone color is partially determined by 
+what combinations of wave forms make up the sound.
+Looking at the images below, we are unable to see anything distinct in the timbres 
+of a short clip of a clarinet versus an oboe in the time domain.
+
+> IMG OF TWO CLIPS HERE? 
+
+If we take both of these very short clips of audio and perform a fourier transform
+on these waveforms we can move them from the time domain to the frequency 
+domain and suspend them in time.
+
+Looking at these exact same clips of sound, but now in the frequency domain, we 
+can see that the two sounds are very different.
+Inspecting these audio clips in the frequency domain allows us to see an audio 
+fingerprint of each of the instrument's timbres.
+
+> Img of Other two? 
+
+Using spectrograms is only made possible with the fourier transform and 
+is the basis for investigating questions of musical timbre, automatic chord 
+transcription, as well as many other tasks of musical analysis. 
+
 
 <!--
 Fourier transform
