--- a/_units/01.md
+++ b/_units/01.md
@@ -424,7 +424,7 @@ While that is probably more math than you might normally come into contact with
 in a course on music psychology, the FT allows us to perform very clever types of 
 analyses of sounds as we will see below. 
 
-{% include note author="jm" text="is this too much math and / or discussion
+{% include note author="jm" text="is this too much math and / or discussion" %}
 {% include note author="djb" text="I like it, just added some stuff about the why on either end" %}
 
 ## Spectrum
