added screenshots of max patches to stand in for browser content, improved the text of unit 1 a bit, and connected both oscillators to both dac inlets in the does phase matter patch so that the cancellation effect is stronger when they are 180 deg out of phase.

--- a/_units/01.md
+++ b/_units/01.md
@@ -40,7 +40,7 @@ When I make a sound, say I clap my hands together, I've produced a
 disturbance in the air that eventually travels to your ears, 
 resulting in an effect that we ultimately describe as sound.
 This disturbance travels in every direction, reflecting
-differently off of every surface, walls, the floor, the ceiling, bodies,
+differently off of every surface, the walls, the floor, the ceiling, bodies,
 furniture, etc. depending on their materials. This is all caused by 
 air molecules bumping into each other; as they move away from the 
 source of the sound, they create a region of higher pressure 
@@ -59,8 +59,8 @@ this information as "sound". The transfers of energy from one
 medium to another is called *transduction*, and the different parts
 of our anatomy through which these pressure waves are *transduced*
 as they make their way to our brain will be discussed in 
-unit 2 {% include note author="jm" text="this should be a link to unit 2" %}.
-For now, we will focus in this unit on physical characteristics of 
+unit 2.
+For now, we will focus in this unit on the physical characteristics of 
 sound waves, and the ways we represent them.
 
 # Recording and Representing Sound
@@ -128,12 +128,12 @@ picture-in-picture" allowfullscreen></iframe>
 </div>
 
 Speakers work in the opposite way: an electrical signal is sent to
-a coil surrounded by a magnet, and the modulations in voltage cause displace
+a coil surrounded by a magnet, and the modulations in voltage displace
 the coil and a membrane, or speaker cone, attached to it, which moves the air
 back and forth.
 
 *Digital* recordings make use of the *analog* electrical signal described
-above, but record the value of the voltage *periodically*, by *sampling* it
+above, but record the value of the voltage *periodically*, by *sampling* it,
 commonly at 44100 times per second. This is done using an 
 *Analog to Digital Converter* or *ADC*, and the process is reversed 
 by a *Digital to Analog Converter* or *DAC*, which modulates
@@ -145,10 +145,9 @@ while digital signals are *discrete*, i.e. they
 can be thought of as consisting of individual values
 that were recorded by taking samples of an electrical voltage a finite number
 of times, at equally spaced intervals in time. 
-{% include begin-figure description="Digital (discrete) vs. analog (continuous)
-representations of a signal" %}
-{% include note author="jm" text="placeholder" %}
-{% include end-figure %}
+{% include img-figure url="/MUTOR/assets/images/analogvdigital.png" 
+description="Digital (discrete) vs. analog (continuous) representations 
+of a signal" %}
 This process comes with advantages and disadvantages, the main disadvantage
 being the loss of information between samples. During playback,
 this lost information is reconstructed during the digital to analog
@@ -197,11 +196,11 @@ unit circle, starting from the point (1, 0).
 					  and the position of a point on the circumference
 					  of a circle." %}
 
-As we mentioned above, the physical property *amplitude* is related the 
+As we mentioned above, the physical property *amplitude* is related to the 
 perceptual experience of *loudness*. Additionally, the *frequency* of this
 sine wave is related to the perceptual experience of *pitch*, with 
 higher frequencies and shorter periods correlating to higher 
-*sounding* notes or pitches.
+*sounding* pitches, or notes.
 
 ### Phase
 
@@ -234,9 +233,9 @@ the two have a phase difference of $90^{\circ}$.
 #### How Does Phase Affect Sound?
 
 If a sine wave and a cosine wave are identical with the exception of
-a time shift, they should sound identical, right? Well they do, but that 
+a time shift, they should sound identical, right? Well they do. That 
 doesn't mean that phase isn't important, but its affect on sound is 
-not always intuitive. For a sinusoid by it self, it is impossible to hear
+not always intuitive. For a sinusoid by itself, it is impossible to hear
 any difference, no matter where it started in its cycle. 
 Where you can begin to hear a difference is when you start to combine different 
 sine waves.
@@ -249,11 +248,8 @@ exactly half that of the other, the two cancel each other out and produce
 a flat waveform of 0 amplitude. Try shifting the phase of one sinusoid
 against another in the example below.
 
-{% include begin-figure description="Two sinusoids, one with variable phase
-with respect to the other." %}
-{% include note author="jm" text="need a simple example here with a single
-slider to move the phase of one sine tone with respect to the other." %}
-{% include end-figure %}
+{% include img-figure url="/MUTOR/assets/images/MUTOR_DoesPhaseMatter1.png" 
+description="Two sinusoids, one with variable phase with respect to the other." %}
 
 You might notice a subtle change in pitch when you move the slider quickly---
 this is because a shift in phase requires the waveform to "jump" forward
@@ -271,11 +267,9 @@ tell us much about how a signal will actually *sound*. Below, we will
 look at another representation of signals, the *frequency-domain*, but
 before that, let's look at more complex waveforms.
 
-{% include begin-figure description="Changes in phase do not always produce
-changes in our perception of a sound." %}
-{% include note author="jm" text="This should be the does phase matter? demo" %}
-{% include end-figure %}
-{% capture does_phase_matter %}{{ fignum }}{% endcapture %}
+{% include img-figure url="/MUTOR/assets/images/MUTOR_DoesPhaseMatter2.png" 
+description="Changes in phase do not always produce changes in our perception 
+of a sound." %}
 
 ### Summary
 
@@ -312,8 +306,7 @@ When we add simple sounds together, as we did in figure
 of the different frequency components relative to one another account for
 much of the ways in which we experience *timbre* or the *tone color* of 
 a sound, that is, the thing that makes a clarinet sound like a clarinet and
-a piano sound like a piano (more on this in unit 
-{% include note author="jm" text="need a way to refer to units..." %}).
+a piano sound like a piano (more on this in the unit on timbre).
 
 When pure tones with frequencies that are integer multiples of some 
 frequency are added together, we say that they are in a *harmonic* relationship;
@@ -424,16 +417,13 @@ While that is probably more math than you might normally come into contact with
 in a course on music psychology, the FT allows us to perform very clever types of 
 analyses of sounds as we will see below. 
 
-{% include note author="jm" text="is this too much math and / or discussion" %}
-{% include note author="djb" text="I like it, just added some stuff about the why on either end" %}
-
 ## Spectrum
 
 Once a wave form has been converted from the time domain to the frequency domain 
-using a fourier transformation, the resulting representation is often referred to as its
+using a Fourier transformation, the resulting representation is often referred to as its
 *spectrum*. 
 The spectrum is basically a snapshot of the component parts of whatever waveform 
-that you fed into the fourier transform.
+that you fed into the Fourier transform.
 You could do this with something as short as a recording of a pluck of a single note 
 on a banjo or an entire symphony.
 
@@ -449,9 +439,8 @@ is also a tacit statement that it is a significantly less important feature
 than the frequency information.
 
 Another representation of the spectrum over time is called a *sonogram*:
-{% include begin-figure description="A sonogram." %}
-{% include note author="jm" text="interactive sonogram ex" %}
-{% include end-figure %}
+{% include img-figure url="/MUTOR/assets/images/MUTOR_SpectrumAndSonogram.png" 
+description="A spectrum (left) and a sonogram (right)." %}
 Here, we can see a history of the spectrum over time, with the height
 representing frequency, the brightness *magnitude* (related to amplitude),
 and time along the x-axis.
@@ -465,7 +454,7 @@ of a short clip of a clarinet versus an oboe in the time domain.
 
 > IMG OF TWO CLIPS HERE? 
 
-If we take both of these very short clips of audio and perform a fourier transform
+If we take both of these very short clips of audio and perform a Fourier transform
 on these waveforms we can move them from the time domain to the frequency 
 domain and suspend them in time.
 
@@ -476,7 +465,7 @@ fingerprint of each of the instrument's timbres.
 
 > Img of Other two? 
 
-Using spectrograms is only made possible with the fourier transform and 
+Using spectrograms is only made possible with the Fourier transform and 
 is the basis for investigating questions of musical timbre, automatic chord 
 transcription, as well as many other tasks of musical analysis. 
 
