minor change to unit 1 text

--- a/_units/01.md
+++ b/_units/01.md
@@ -250,6 +250,7 @@ against another in the example below.
 
 {% include img-figure url="/MUTOR/assets/images/MUTOR_DoesPhaseMatter1.png" 
 description="Two sinusoids, one with variable phase with respect to the other." %}
+{% assign does_phase_matter=fignum %}
 
 You might notice a subtle change in pitch when you move the slider quickly---
 this is because a shift in phase requires the waveform to "jump" forward
@@ -391,7 +392,7 @@ X(k)=\sum^{N-1}_{n=0}x(n)\left[ \cos\left(2\pi \frac{kn}{N}\right) - i \sin\left
 \label{eq:dft-trig}
 \end{equation}
 we can see that what the DFT is actually doing is multiplying our original signal
-by a bunch of sineusoids of different frequencies and summing the results, giving 
+by a bunch of sinusoids of different frequencies and summing the results, giving 
 us a signal that tells us effectively "how much" of these frequencies the 
 signal "contains".
 
