added discussion questions

--- a/_units/01.md
+++ b/_units/01.md
@@ -15,8 +15,11 @@ authors:
 - John MacCallum
 topics: [Physics of Sound and its Representation]
 test_questions:
-- question 1
-- question 2
+- Briefly explain how a microphone works.
+- What is the term for the way in which energy moves between different media?
+- What were the two signal domains discussed?
+- What is the name of the process by which a signal is converted from one of these domains to the other?
+- Describe how time, frequency, and magnitude (amplitude) are represented in a sonogram.
 
 ###
 # page layout:
