added a new verson of the unrolled basilar membrane

--- a/_units/02.md
+++ b/_units/02.md
@@ -138,7 +138,7 @@ In its resting state, the basilar and tectorial membranes are parallel, the ster
 
 The cochlea is a coiled structure, contains the entire length of the basilar membrane. The unrolled cochlea contains the straightened basilar membrane, which is sensitive to a gradient of frequencies. The basilar membrane is tonotopically mapped, which means that different parts of the basilar membrane are optimally sensitive to a gradient of frequencies. The base of the cochlea is sensitive to low frequencies whereas the apical end is most sensitive to the highest frequencies. Tonotopic mapping begins at the basilar membrane and is preserved all the way throughout the auditory system, maintaining its structure until the level of the PrimaryAuditoryCortex.
 
-{% include img-figure url="/MUTOR/assets/images/basilar_unrolled.gif" description="Basilar Membrane Unrolled" %}
+{% include img-figure url="/MUTOR/assets/images/basilar_unrolled.png" description="Basilar Membrane Unrolled" %}
 {% comment %} (image source: http://www.cs.indiana.edu/~port/teach/641/hearing.for.linguists.html) Drawing of the unrolled cochlea, showing the basilar membrane. {% endcomment %}
 
 {% include img-figure url="/MUTOR/assets/videos/animated_basilar.gif" description="Basilar Membrane Traveling Wave Animation" %}
